# text-adventure

./: LICENSE  README.md  main.py  pyproject.toml
backend/: dto.py  game_overview_agent.py  gamemaster_system_prompt.py  main.py  pyproject.toml  session_store.py
backend/app/: .gitignore  lambda_handler.py  pyproject.toml
backend/app/src/adapters/api/: perform_action.py
backend/app/src/adapters/config/: config.py
backend/app/src/adapters/llm/: llm.py
backend/app/src/adapters/persistence/: session_store.py
backend/app/src/core/: game.py  game_overview_prompt.py
backend/app/src/model/: create_game_result.py  overview.py  perform_action_result.py
backend/app/tests/: mock_chatgroq.py
backend/infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml  stack.py
backend/src/: game_overview_agent.py  gamemaster_system_prompt.py  main.py  session_store.py
backend/src/adapters/agents/: game_overview_agent.py  gamemaster_agent.py
backend/src/adapters/api/: app.py  main.py  perform_action.py  start_game.py
backend/src/adapters/config/: config.py
backend/src/adapters/llm/: llm.py
backend/src/adapters/model/: model.py
backend/src/adapters/persistence/: session_store.py
backend/src/core/: game.py  game_overview_prompt.py  gamemaster_system_prompt.py
backend/src/model/: create_game_result.py  message.py  perform_action_result.py  results.py  session.py
backend/tests/: test_perform_action.py  test_start_game.py
frontend/: jest.config.js
frontend/app/: globals.css  layout.tsx  package.json  page.tsx  pnpm-lock.yaml
frontend/app/_components/: Game.tsx
frontend/app/app/: page.tsx
frontend/app/libs/: config.tsx  sendPerformAction.tsx  (+1 more)
frontend/infra/: README.md  cdk.json  package.json  pnpm-lock.yaml
frontend/libs/: sendPerformAction.test.tsx  sendPerformAction.tsx  sendStartGame.test.tsx  sendStartGame.tsx
(+17 files in other folders)
